# bio.kowkodivka

./: .gitignore  Dockerfile  README.md  client.ts  deno.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  server.ts  tsconfig.json  utils.ts  vite.config.ts
assets/: styles.css
backend/: .env.example  Cargo.toml  Dockerfile
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260314_190538_ip.rs
backend/src/: error.rs  main.rs  model.rs
backend/src/entities/: device_metrics.rs  mod.rs
backend/src/routes/: device_metrics.rs  mod.rs  not_found.rs
routes/: _app.tsx  _layout.tsx  index.tsx
routes/(_components)/: Dock.tsx  Logo.tsx  Navbar.tsx
routes/(_islands)/: Socials.tsx
src/: App.tsx  index.css  index.tsx  types.d.ts  types.ts
src/components/: DeviceMetricsTracker.tsx  Dock.tsx  GitHubMarkdown.tsx  I18nProvider.tsx  LanguageSwitcher.tsx  Navbar.tsx  Socials.tsx  TooltipCopy.tsx
src/components/about/: ProfileDetailsSection.tsx  ProfileUserSummary.tsx  Socials.tsx
src/components/about/components/: Socials.tsx
src/components/dock/: index.tsx
src/components/navbar/: index.tsx
src/components/navbar/components/: FreeRussiaBanner.tsx  LanguageSwitcher.tsx
src/components/ui/: Icon.tsx  LanguageSwitcher.tsx  RenderIcon.tsx  SiIcon.tsx
src/locales/: en-US.ts  ru.ts  uk.ts
src/pages/: AboutPage.tsx
src/providers/: I18nProvider.tsx
src/routes/: About.tsx  Projects.tsx  Socials.tsx
src/routes/about/: index.tsx
src/styles/: markdown.css
