[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
migration = { version = "0.1.0", path = "migration" }
sea-orm = { version = "1.1.19", features = ["chrono", "json-array", "runtime-tokio", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "tracing", "net"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
